# OSU

./: .gitignore
CS_161/: Assignment 7 comparisons.docx  Reflection.docx  ~$signment 7 comparisons.docx
CS_161/Exam1/: Makefile  Template.cpp
CS_161/module1/: .project  Makefile  animal.cpp
CS_161/module10/: Book.cpp  Book.hpp  Library.cpp  Makefile  Patron.cpp  Patron.hpp  library  main.cpp
CS_161/module2/: .project  Makefile  average  average.cpp  change  change.cpp  temp_Convert  temp_Convert.cpp
CS_161/module3/: Makefile  fileAdder  fileAdder.cpp  minmax  minmax.cpp  numGuess  numGuess.cpp
CS_161/module4/: Makefile  fallDistance.cpp  hailstone.cpp  smallSort.cpp
CS_161/module5/: BankAccount.cpp  BankAccount.hpp  Box.cpp  Box.hpp  Makefile  bankaccount
CS_161/module6/: LineSegment.cpp  LineSegment.hpp  Makefile  Point.cpp  Point.hpp  linesegment  point
CS_161/module7/: Makefile  findMode  findMode.cpp  findMode.hpp
CS_161/module8/: Item.cpp  Item.hpp  Makefile  ShoppingCart.cpp  ShoppingCart.hpp  shoppingcart
CS_161/module9/: Board.cpp  Board.hpp  Makefile  TicTacToe.cpp  TicTacToe.hpp
CS_162/assignment1/: Makefile  groceryItem.cpp  groceryItem.hpp  groceryList.cpp  groceryList.hpp  groceryMain.cpp  lib_flip_display.cpp  lib_flip_display.hpp
CS_162/assignment2/: CritterController.cpp  CritterController.hpp  Makefile  assignment2 design.docx  assignment2.cpp  critter.cpp  critter.hpp  critterAnt.cpp  critterAnt.hpp  critterDoodleBug.cpp  critterDoodleBug.hpp  critterDoodlebug.cpp  critterDoodlebug.hpp  lib_flip_display.cpp  lib_flip_display.hpp
CS_162/assignment3/: Makefile  arg_parse.cpp  arg_parse.hpp  assignment3  assignment3.cpp  assignment3.hpp  characterBase.cpp  characterBase.hpp  characterBlueMen.cpp  characterBlueMen.hpp  characterGollum.cpp  characterGollum.hpp  characterHarryPotter.cpp  characterHarryPotter.hpp  characterMedusa.cpp  characterMedusa.hpp  characterReptilePeople.cpp  characterReptilePeople.hpp  dice.cpp  dice.hpp  diceCombo.cpp  diceCombo.hpp  lib_arg_parse.cpp  lib_arg_parse.hpp  lib_flip_display.cpp  lib_flip_display.hpp
CS_162/final/: Makefile  classDecl.hpp  final.cpp  gameObject.cpp  gameObject.hpp  gameObjects.cpp  gameObjects.hpp  gamePlayer.cpp  gamePlayer.hpp  gameSpace.cpp  gameSpace.hpp  gameSpaceController.cpp  gameSpaceController.hpp  gameSpaces.cpp  gameSpaces.hpp  gameState.cpp  gameState.hpp
CS_162/lab_aa/: Makefile  average.cpp  average.h  lab-aa.cpp  lab1-1.cpp  lab1-2.cpp  lib_flip_display.h  summation.cpp  summation.h
CS_162/lab_ab/: Makefile  average.cpp  average.h  lab-ab.cpp  summation.cpp  summation.h
CS_162/lab_b/: Makefile  Roll results.docx  dice.cpp  dice.hpp  diceMain.cpp  diceRun_10.csv  diceRun_100.csv  diceRun_1000.csv  loadedRun_10.csv  loadedRun_100.csv  loadedRun_1000.csv  loadeddice.cpp
CS_162/lab_c/: Makefile  lab-c.cpp  lib_flip_display.cpp  robot.txt  robot_back.txt
CS_162/lab_d/: Makefile  copy.cpp  encryption.cpp  lab-d.cpp  lab-d.hpp  orderedoutput.cpp  robot.txt.outputEncryption  robot.txt.outputOrdered  robot.txt.outputToUpper  toupper.cpp  toupper.hpp  transformer.cpp  transformer.hpp
CS_162/lab_e/: Makefile  lab-e  lab-e.cpp  node.cpp  node.hpp  nodeController.cpp  nodeController.hpp
CS_162/lab_f/: Makefile  lab-f  lab_f.cpp  lib_arg_parse.hpp  queue.hpp  stack.hpp
CS_162/lab_fb/: Makefile  Queue.cpp  Stack.cpp  calculator.cpp  calculator.hpp  lab_fb.cpp  lab_fb_test.cpp  queue.hpp  stack.hpp
CS_162/lab_g/: Makefile  fileLoader.cpp  fileLoader.hpp  lab_g.cpp  rand_integer.txt  rand_integer_0.txt  rand_integer_0_sorted.txt  rand_integer_sorted.txt  stack.hpp
CS_162/lab_h/: Makefile  fileCreateApp.cpp  fileCreator.cpp  fileCreator.hpp  fileLoader.cpp  fileLoader.hpp  lab_h.cpp  lib_arg_parse-create.cpp  lib_arg_parse-create.hpp  lib_arg_parse.cpp  lib_arg_parse.hpp  lib_flip_display.cpp  mergeSortIterative.cpp  mergeSortIterative.hpp  mergeSortRecursive.cpp  mergeSortRecursive.hpp  small.file  test.file  timer.cpp  timer.hpp
CS_261/assignment1/: Q1.c  Q3.c
CS_261/assignment_0/: Makefile  assignment0.cpp  cs_261_assignment_0  lib_arg_parse.cpp  lib_arg_parse.hpp
CS_261/assignment_1/: Q0.c  Q1.c  Q2.c  Q3.c  Q4.c  Q5.c
CS_261/assignment_2/: amortizedAnalysis.txt
CS_261/assignment_4/: bst.c  compare.c
CS_261/assignment_5/: dynamicArray.c  task.c  testfile  testfile2  tests  toDo  toDo.c
CS_261/assignment_6/: hashMap.c  main.c  makefile  spellChecker.c
CS_261/assignment_7/: Jeremy Prater.docx  graph.c
CS_271/project1/: JeremyPraterProject01.asm  Project.VC.db  Project.lst  (+2 more)
CS_290/: automobiles.js  package.json  server.js
CS_325/hw1/: CMakeLists.txt  hw1.csv  insert.out  testBuild.py
CS_325/hw1/include/: SortHelpers.h
CS_325/hw1/platform/include/: OpenCL.hpp
CS_325/hw1/platform/src/: OpenCL.cpp
CS_325/hw1/src/: SortHelpers.cpp  hw1.cpp
CS_340/: phptest.php
CS_344/assignment3/: CMakeLists.txt  make_smallsh  readme.txt  testrun
CS_344/assignment3/include/: smallsh-process.h  smallsh-shell.h  smallsh-signals.h  smallsh.h
CS_344/assignment3/src/: smallsh-process.c  smallsh-shell.c  smallsh-signals.c  smallsh.c
CS_344/assignment4/src/otp_dec_d/: CMakeLists.txt  otp_dec_d.c
CS_344/assignment4/src/otp_enc/: CMakeLists.txt  otp_enc.c
CS_344/assignment4/src/otp_enc_d/: CMakeLists.txt  otp_enc_d.c
CS_372/project2/server/: CMakeLists.txt  start_build
CS_372/project2/server/include/: ftserver-data.h  ftserver.h
CS_372/project2/server/src/: ftserver-data.c  ftserver.c
CS_475/project2/: CMakeLists.txt  project2-flip.csv  project2-home.csv  testBuild.py
CS_475/project2/src/: project1.cpp  project2.cpp
CS_475/project3/: CMakeLists.txt  testBuild.py  work_station_project3.csv
CS_475/project3/src/: project3.cpp
CS_475/project6/: CMakeLists.txt  GTX980.csv  GTX980.xlsx  project6.docx  testBuild.py
CS_475/project6/platform/include/: OpenCL.hpp
CS_475/project6/platform/src/: OpenCL.cpp
CS_475/project6/src/: ArrayMulti.cl  ArrayMultiAdd.cl  ArrayMultiAddReduce.cl  first.cl  project6.cpp
wiki/: .htaccess  index.php
(+388 files in other folders)
