
cmake_minimum_required (VERSION 2.8.12)

set (PROJ_NAME smallsh)

project (${PROJ_NAME})

set(CMAKE_BUILD_TYPE Debug)

# Add include folders
include_directories("${PROJECT_SOURCE_DIR}/include")

# Source Files
set(SMALL_SH_SRC
  ${PROJECT_SOURCE_DIR}/src/smallsh.c
  ${PROJECT_SOURCE_DIR}/src/smallsh-shell.c
  ${PROJECT_SOURCE_DIR}/src/smallsh-process.c
)

# Define the output executable
add_executable(${PROJ_NAME} ${SMALL_SH_SRC})
