
cmake_minimum_required (VERSION 2.8.12)

set (PROJ_NAME otp_enc_d)

project (${PROJ_NAME})

set(CMAKE_BUILD_TYPE Debug)

# Add include folders
include_directories("${PROJECT_SOURCE_DIR}/../common")

# Source Files
set(OTP_ENC_D_SRC
  ${PROJECT_SOURCE_DIR}/otp_enc_d.c
)

# Define the output executable
add_executable(${PROJ_NAME} ${OTP_ENC_D_SRC})
